flicker fix 2

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,9 +49,12 @@ body::-webkit-scrollbar {
 
 .content {
     position: absolute;
-
+/* 
     left: 0;
-    right: 0;
+    right: 0; */
+
+    inset: 0;
+    z-index: 0;
 }
 
 .faces {
